# update-mypy-hook

./: .pre-commit-config.yaml  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: ci.yml  feature_push.yml
src/: update_mypy_hook.py
